--- a/multi-cluster/helm/fleet.yaml
+++ b/multi-cluster/helm/fleet.yaml
@@ -17,8 +17,8 @@ imageScans:
   tagName: test-scan
 
   # specify secret to pull image if in private registry
-  #secretRef:
-    #name: dockerhub-secret
+  secretRef:
+    name: harbor-secret
 
   # Specify the scan interval
   interval: 5m
